trunk/Archive2/e7/92c18f6ddaab55/output
main.cpp: In function 'int main()':
main.cpp:60:19: error: unable to find numeric literal operator 'operator""b1234_baseChange'
     const ULL v = 17b1234_baseChange;
                   ^
